# localstack-persist

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyrightconfig.json  setup.cfg  test.cmd  test.py  test.sh
.github/workflows/: docker-push.yml  test.yml
persisted-data/lambda/: AccountRegionBundle.json
persisted-data/s3/: S3BackendDict.json
persisted-data/state/dynamodb/: 000000000000useast1_us-east-1.db
persisted-data/sts/: BackendDict.json
src/localstack_compere/: config.py  hooks.py  state.py  visitors.py
src/localstack_persist/: config.py  hooks.py  jsonpickle.py  prepare_service.py  s3_migration.py  state.py  utils.py  visitors.py
src/localstack_persist/s3/: migrate_ephemeral_object_store.py  migrate_to_v3.py  storage.py
src/localstack_persist/serialization/: __init__.py  utils.py
test/: Dockerfile  cert.pem  cfn_template.yaml  key.pem  main.py  test.py
test-persisted-data/dynamodb/: 000000000000_us-east-1.db  store.json
test-persisted-data/lambda/: store.json
test-persisted-data/opensearch/: store.json
test-persisted-data/s3/: backend.json  store.json
test-persisted-data/sqs/: AccountRegionBundle.json  store.json
test-persisted-data/v2/acm/: backend.json
test-persisted-data/v2/dynamodb/: store.json
test-persisted-data/v2/dynamodbstreams/: store.json
test-persisted-data/v2/es/: backend.json
test-persisted-data/v2/s3/: store.json
test-persisted-data/v2/sqs/: backend.json  store.json
test-persisted-data/v2/sts/: backend.json
test-persisted-data/v3/acm/: backend.json
test-persisted-data/v3/dynamodb/: store.json
test-persisted-data/v3/dynamodbstreams/: store.json
test/lambda/: bootstrap
(+163 files in other folders)
