[metadata]
name = localstack-compere
version = 0.0.1
author = Graham Esau
author_email = hello@graham.cool
description = Persistence for localstack community

[options]
package_dir =
  = src
packages =
  localstack_compere
install_requires =
  localstack-core>=2.0.0

[options.entry_points]
localstack.hooks.on_infra_start =
  on_infra_start = localstack_compere.hooks:on_infra_start
localstack.hooks.on_infra_shutdown =
  on_infra_shutdown = localstack_compere.hooks:on_infra_shutdown
