[metadata]
name = localstack-persist
version = 0.0.1
author = Graham Esau
author_email = hello@graham.cool
description = Persistence for localstack community

[options]
packages = find:
package_dir =
  = src
install_requires =
  localstack-core>=2.0.0

[options.packages.find]
where = src

[options.entry_points]
localstack.hooks.on_infra_start =
  localstack_persist_on_infra_start = localstack_persist.hooks:on_infra_start
localstack.hooks.on_infra_shutdown =
  localstack_persist_on_infra_shutdown = localstack_persist.hooks:on_infra_shutdown
